# GstGeminiVision

./: Dockerfile  README.md
docs/: gst_inspect_geminivision.txt
examples/: Makefile  gemini_vision_example.c  gemini_vision_example.py  gemini_vision_example2.c
gst-gemini-plugin/: entrypoint.sh  meson.build
gst-gemini-plugin/src/: gstgeminivision.c  gstgeminivision.h  plugin.c
